# ecs-engine

./: .gitattributes  CMakeLists.txt  Important_notes.md  README.md
.github/workflows/: ci.yml
docs/: Important_notes.md
include/: archetype_manager.h  component_registry.h  ecs.h  ecs_data_types.h  ecs_engine.h  i_component_registry.h  i_fatal_error_handler.h  null_fatal_error_handler.h
include/query-system/: chunk_array_view.h  entity_chunk_view.h  query.h  query_builder.h  query_system.h
src/: archetype_manager.cpp  bump_allocator.cpp  command_buffer.cpp  command_processor.cpp  component_registry.cpp  ecs_engine.cpp  ecs_internal_manager.cpp  entity_manager.cpp  null_fatal_error_handler.cpp
src/internal/: archetype_manager.h  bump_allocator.h  command_buffer.h  command_processor.h  common_data_types.h  ecs_internal_manager.h  entity_manager.h
src/internal/query-system/: query_system.h
src/query-system/: chunk_array_view.cpp  entity_chunk_view.cpp  query.cpp  query_builder.cpp  query_system.cpp
tests/: CMakeLists.txt
tests/integration/: CMakeLists.txt
tests/integration/ecs/: ecs_engine_test.cpp
tests/unit/: CMakeLists.txt
